--- a/index.html
+++ b/index.html
@@ -21,6 +21,23 @@
     <div class="content">
         <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started</p>
         <p>You <em>know</em> you want to.</p>
+        <form action="fakewebsite.com" method="post" id="form">
+            <h1>Lets do this!</h1>
+            <label for="first_name">First Name:</label>
+            <input type="text" id="first_name" name="first_name">
+            <label for="last_name">Last Name:</label>
+            <input type="text" id="last_name" name="last_name">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email">
+            <label for="phone">Phone Number:</label>
+            <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password">
+            <label for="cpassword">Confirm Password:</label>
+            <input type="password" id="cpassword" name="cpassword">
+        </form>
+        <button type="submit" form="form" value="Submit">Create Account</button>
+        <p>Already have an account? <a href="broken.com"> Log in</a></p>
     </div>
 
 </body>
