--- a/index.html
+++ b/index.html
@@ -12,29 +12,42 @@
 </head>
 <body>
     <div class="image">
-        <img src="Images/luke-stackpoole-5Qqkjn4PFPA-unsplash.jpg" alt="Aurora with man standing under it" class="hero">
+        <img src="Images/jonatan-pie-EvKBHBGgaUo-unsplash.jpg" alt="Aurora with man standing under it" class="hero">
         <div class="brand">
-            <img src="Images/noun-big-dipper-constellation-3643231.svg" alt="big dipper image" class="logo">
+            <img src="Images/big-dipper-svgrepo-com (1).svg" alt="big dipper image" class="logo">
             <h1>Upward</h1>
         </div>
     </div>
     <div class="content">
         <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started</p>
         <p>You <em>know</em> you want to.</p>
-        <form action="fakewebsite.com" method="post" id="form">
+        
+        <form action="#" method="post" id="form">
             <h1>Lets do this!</h1>
-            <label for="first_name">First Name:</label>
-            <input type="text" id="first_name" name="first_name">
-            <label for="last_name">Last Name:</label>
-            <input type="text" id="last_name" name="last_name">
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email">
-            <label for="phone">Phone Number:</label>
-            <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password">
-            <label for="cpassword">Confirm Password:</label>
-            <input type="password" id="cpassword" name="cpassword">
+            <div class="first">
+                <label for="first_name">FIRST NAME</label>
+                <input type="text" id="first_name" name="first_name">
+            </div>
+            <div class="last">
+                <label for="last_name">LAST NAME</label>
+                <input type="text" id="last_name" name="last_name">
+            </div>
+            <div class="email">
+                <label for="email">EMAIL</label>
+                <input type="email" id="email" name="email">
+            </div>
+            <div class="phone">
+                <label for="phone">PHONE NUMBER</label>
+                <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+            </div>
+            <div class="password">
+                <label for="password">PASSWORD</label>
+                <input type="password" id="password" name="password">
+            </div>
+            <div class="cpassword">
+                <label for="cpassword">CONFIRM PASSWORD</label>
+                <input type="password" id="cpassword" name="cpassword">
+            </div>
         </form>
         <button type="submit" form="form" value="Submit">Create Account</button>
         <p>Already have an account? <a href="broken.com"> Log in</a></p>
