finished basic page style

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </form>
         <button type="submit" form="form" value="Submit">Create Account</button>
-        <p>Already have an account? <a href="broken.com"> Log in</a></p>
+        <p class="login">Already have an account? <a href="broken.com"> Log in</a></p>
     </div>
 
 </body>
