--- a/index.html
+++ b/index.html
@@ -26,32 +26,48 @@
             <h1>Lets do this!</h1>
             <div class="first">
                 <label for="first_name">FIRST NAME</label>
-                <input type="text" id="first_name" name="first_name">
+                <input type="text" id="first_name" name="first_name" required placeholder="Joe">
             </div>
             <div class="last">
                 <label for="last_name">LAST NAME</label>
-                <input type="text" id="last_name" name="last_name">
+                <input type="text" id="last_name" name="last_name" required placeholder="Smith">
             </div>
             <div class="email">
                 <label for="email">EMAIL</label>
-                <input type="email" id="email" name="email">
+                <input type="email" id="email" name="email" required placeholder="example@gmail.com">
             </div>
             <div class="phone">
                 <label for="phone">PHONE NUMBER</label>
-                <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+                <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required placeholder="123-456-7890">
             </div>
             <div class="password">
                 <label for="password">PASSWORD</label>
-                <input type="password" id="password" name="password">
+                <input type="password" id="password" name="password" required>
             </div>
             <div class="cpassword">
                 <label for="cpassword">CONFIRM PASSWORD</label>
-                <input type="password" id="cpassword" name="cpassword">
+                <input type="password" id="cpassword" name="cpassword" required>
+                <div class="match"></div>
             </div>
         </form>
         <button type="submit" form="form" value="Submit">Create Account</button>
         <p class="login">Already have an account? <a href="broken.com"> Log in</a></p>
     </div>
-
 </body>
+<script>
+    let password = document.querySelector(".password > input");
+    let cpassword = document.querySelector(".cpassword > input");
+    let error = document.querySelector(".match");
+
+    cpassword.addEventListener("input", function (event) {
+        if (password.value !== cpassword.value) {
+            error.textContent = "Passwords do not match";
+        }
+        else {
+            error.textContent = "";
+        }
+    })
+    
+
+</script>
 </html>
